test/tests/stages/18_structures/invalid_struct_tags/return_type_undeclared.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[20]:
  void
  identifier(exit)
  (
  int
  identifier(status)
  )
  ;
  struct
  identifier(s)
  identifier(foo)
  (
  void
  )
  {
  identifier(exit)
  (
  const int(0)
  )
  ;
  }
